[package]
name = "yeelight_console"
version = "0.1.1"
edition = "2021"
description = "CLI for yeelights"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.66"
apyee = { version = "0.5.1" }
clap = { version = "4.0.22", features = ["derive", "unicode"] }
csscolorparser = "0.6.2"
tokio = { version = "1.21.2", features = ["full"] }
